--- a/samples/ConsoleSample.WithoutDI/ConsoleSample.WithoutDI.csproj
+++ b/samples/ConsoleSample.WithoutDI/ConsoleSample.WithoutDI.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+		<ProjectReference Include="..\..\src\SharpDbHub\SharpDbHub.csproj" />
 	</ItemGroup>
 
 </Project>
