--- a/samples/ConsoleSample.WithoutDI/ConsoleSample.WithoutDI.csproj
+++ b/samples/ConsoleSample.WithoutDI/ConsoleSample.WithoutDI.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\src\SharpDbHub\SharpDbHub.csproj" />
+	  <PackageReference Include="SharpDbHub" Version="1.0.0" />
 	</ItemGroup>
 
 </Project>
